Cover registerViewCintroller with unit tests and snapshot tests

--- a/Mafia.xcodeproj/xcshareddata/xcschemes/Mafia.xcscheme
+++ b/Mafia.xcodeproj/xcshareddata/xcschemes/Mafia.xcscheme
@@ -39,17 +39,6 @@
                ReferencedContainer = "container:Mafia.xcodeproj">
             </BuildableReference>
          </TestableReference>
-         <TestableReference
-            skipped = "NO"
-            parallelizable = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "0567E93A28FF8CDB001F774A"
-               BuildableName = "MafiaUITests.xctest"
-               BlueprintName = "MafiaUITests"
-               ReferencedContainer = "container:Mafia.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
@@ -72,6 +61,13 @@
             ReferencedContainer = "container:Mafia.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "FB_REFERENCE_IMAGE_DIR"
+            value = "$(SOURCE_ROOT)/SnapshotImages"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
